@@ -579,3 +579,6 @@ m4_include(tests/t_multiple_heads_msg.at)
 m4_include(tests/t_diff_currev.at)
 m4_include(tests/t_normalized_filenames.at)
 m4_include(tests/t_inventory.at)
+m4_include(tests/t_rename_file_to_dir.at)
+m4_include(tests/t_replace_file_with_dir.at)
+m4_include(tests/t_replace_dir_with_file.at)
